# proxy-gateway-console-public

./: .gitignore  FEATURES.md  LICENSE  README.md  SECURITY.md  SOURCE_MANIFEST.txt  Start-Proxy-Gateway-Desktop.command  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
.github/: dependabot.yml
agent/: __init__.py  diagnostics.py  gateway_agent.py  health.py  lan_proxy_child.py  linux_lifecycle.py  port_registry.py  profile_crypto.py  profile_schema.py  route_policy.py  runtime_launcher.py  session_store.py  unlock_server.py  upstream_profile.py  usb_identity.py
config/: links.json  profile.template.json
docs/: ACTIONS_BUDGET.md  CONFIG_LAYER_CONTRACT.md  LAN_GATEWAY.md  OPEN_SOURCE_BOUNDARY.md  README.md  SAFETY.md  THIRD_PARTY_NOTICES.md  UPDATE.md
scripts/: cgc  cgc-test.sh  frontend-clean-dist.sh  install-v2.sh  license-audit.mjs  local-ci.sh  stage-usb-v2.sh  uninstall-v2.sh
server/: command.js  command.test.mjs  control-panel.test.mjs  desktop-status.test.mjs  github-workflows.test.mjs  index.mjs  links.js  links.test.mjs  linux-console-view-model.test.mjs  linux-desktop-package.test.mjs  linux-desktop-status.js  linux-desktop-status.test.mjs  linux-profile-import.js  linux-profile-import.test.mjs  linux-proxy-unification.js  linux-proxy-unification.test.mjs  network-smoke-script.test.mjs  open-source-export.test.mjs  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  linux_desktop.rs  mac_vpn.rs  main.rs  proxy_settings.rs  redaction.rs
(+132 files in other folders)
