[package]
name = "proxy-gateway-test"
version = "0.1.0"
description = "Self-use Proxy Gateway v2 desktop test app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
